[gd_scene load_steps=8 format=3 uid="uid://j25nysm364ls"]

[ext_resource type="Texture2D" uid="uid://bbwq605sj5t5u" path="res://assets/main_menu_new.png" id="1_5jd81"]
[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_8mk4k"]
[ext_resource type="Theme" uid="uid://xq1th67h5gd2" path="res://title_theme.tres" id="2_0rgy3"]
[ext_resource type="Script" path="res://scenes/AnaSesSlider.gd" id="4_e05gw"]
[ext_resource type="Script" path="res://scenes/FxSlider.gd" id="5_2nukj"]
[ext_resource type="AudioStream" uid="uid://dj4uilkv8ovjw" path="res://audio/gamemusic.mp3" id="5_n42i4"]
[ext_resource type="AudioStream" uid="uid://c5bjkpkhw11ov" path="res://audio/death.mp3" id="7_10bhp"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8mk4k")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.392157)
texture = ExtResource("1_5jd81")
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -249.5
offset_top = -136.0
offset_right = 249.5
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Zorluk Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_0rgy3")
text = "Zorluk:   
"

[node name="Zorluklar" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Kolay" type="Button" parent="VBoxContainer/HBoxContainer/Zorluklar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Kolay"

[node name="Orta" type="Button" parent="VBoxContainer/HBoxContainer/Zorluklar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Orta"

[node name="Zor" type="Button" parent="VBoxContainer/HBoxContainer/Zorluklar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Zor"

[node name="Ses" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="SesLabel" type="Label" parent="VBoxContainer/Ses"]
layout_mode = 2
theme = ExtResource("2_0rgy3")
text = "Ana Ses Seviyesi:"

[node name="AnaSesSlider" type="HSlider" parent="VBoxContainer/Ses"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.001
value = 1.0
script = ExtResource("4_e05gw")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="FxLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_0rgy3")
text = "Ses Fx Seviyesi:   "

[node name="FxSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.001
value = 1.0
script = ExtResource("5_2nukj")

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Menüye Dön"

[node name="MainMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_n42i4")
autoplay = true
bus = &"Music"

[node name="FxTest" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_10bhp")
bus = &"fx"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Zorluklar/Kolay" to="." method="_on_kolay_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Zorluklar/Orta" to="." method="_on_orta_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Zorluklar/Zor" to="." method="_on_zor_pressed"]
[connection signal="value_changed" from="VBoxContainer/Ses/AnaSesSlider" to="VBoxContainer/Ses/AnaSesSlider" method="_on_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/FxSlider" to="VBoxContainer/HBoxContainer2/FxSlider" method="_on_value_changed"]
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_menübutton_pressed"]
